# letovoAnalytics

./: .deepsource.toml  .dockerignore  .gitignore  .pylintrc  Cargo.toml  Dockerfile.api  Dockerfile.bot  Makefile  Pipfile  Procfile  README.md  api.Dockerfile  api.dockerfile  app.py  bot.Dockerfile  bot.dockerfile  config.py  constants.py  custom_logging.py  customization.py  docker-compose-dev.yaml  docker-compose.yaml  docker-compose.yml  essential.py  essential_old.py  fbAdminConfig.json  go.mod  go.sum  helper.py  heroku.yml  main.py  newMarks.json  pinger.py  pyproject.toml  requirements.txt  tox.ini  users.sql
.github/workflows/: test.yaml
SQL/: alter.sql  create.sql
app/: .dockerignore  .gitignore  essential.py  helper.py  main.py  main_api.py  main_bot.py  pinger.py
app/api/: .gitignore  __main__.py  utils.py
app/api/endpoints/: .gitignore  __init__.py  base.html  bs_table.html  login.py  marks.py  schedule.py  table.py
app/api/static/templates/: indexAPI.html  pageError.html  webview.html
app/api/templates/: pageError.html
app/bot/: __init__.py  __main__.py  callbackquery.py  handlers.py  handlers_old.py  inlinequery.py  old_callbackquery.py
app/bot/callbackquery/: __init__.py  accounts.py  base.py  core.py  dev.py  homework.py  marks.py  others.py  schedule.py
app/bot/handlers/: __init__.py  core.py  core_1.py  dev.py  dev_6.py  holidays.py  homework.py  homework_4.py  iquery.py  iquery_7.py  marks.py  marks_3.py  others.py  others_5.py  ping.py  schedule.py  schedule_2.py
app/dependencies/: __init__.py  database.py  enums.py  errors.py  filters.py  firebase.py  utils.py  web.py
app/dependencies/types/: __init__.py  analytics.py  enums.py
app/helper/: helper.go  main.go
app/pinger/: main.rs
app/schemas/: .gitignore  __init__.py  analytics.py  homework.py  marks.py  schedule.py  sender.py  teachers.py
app/scripts/: test.go  test2.go
app/static/images/icons/: History_CD.m4a
app/templates/: .dockerignore  pageError.html
app/tests/: test_pytest.py  test_unittest.py
classes/: callbackquery.py  database.py  enums.py  firebase.py  inlinequery.py  pydantic_models.py  web.py
static/css/: index.css  info_page.css  main.css  util.css
static/js/: all-5bba9e50.js  serviceworker-2378b519.js  upup.js
templates/: index.html  indexAPI.html  login.html  page403.html  page404.html  page405.html  pageError.html  signup.html
