[package]
name = "letovo-analytics"
version = "2022.3.18"
edition = "2021"
description = "Letovo Analytics bot helps letovians access s.letovo.ru resources via Telegram"
authors = ["arsikurin <arseny.kurin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }

[[bin]]
name = "pinger"
path = "./app/pinger/main.rs"
