[tool.poetry]
name = "letovo-analytics"
version = "2022.01.24"
description = "Letovo Analytics bot helps letovians access s.letovo.ru resources via Telegram"
authors = ["arsikurin <arseny.kurin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
orjson = "^3.6.4"
fastapi = "^0.72.0"
requests = "^2.26.0"
firebase-admin = "^5.1.0"
colourlib = "^0.5.3"
PyYAML = "^6.0"
cryptg = "^0.2.post4"
Jinja2 = "^3.0.2"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"
uvloop = "^0.16.0"
aiorun = "^2021.10.1"
aiohttp = "^3.8.0"
uvicorn = { extras = ["standard"], version = "^0.17.0" }
psycopg = { extras = ["c"], version = "^3.0.4" }
Telethon = "^1.23.0"
pydantic = "^1.8.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
locust = "^2.5.0"
# pytest
# Hypothesis
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
